<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.MainActivity.MainActivity"
    android:orientation="vertical"
    android:background="@android:color/background_light">

    <include layout="@layout/logo_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="10dp"
        android:background="@drawable/statement_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/statementTextView"
            android:layout_height="0dp"
            android:layout_weight="2"
            tools:text="I consider myself a thinker, rather than jumping into mindless conclusions."
            style="@style/StatementTextView" />

        <TextView
            android:id="@+id/statementCountTextView"
            android:layout_height="wrap_content"
            tools:text="1 of 5 "
            style="@style/StatementCountTextView" />

    </LinearLayout>

    <Spinner
        android:id="@+id/choiceSpinnerView"
        android:background="@drawable/spinner_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/previousButtonView"
            android:textColor="@color/disabled_text_color"
            android:enabled="false"
            android:onClick="previousClick"
            style="@style/PreviousButton"/>

        <Button
            android:id="@+id/nextButtonView"
            android:textColor="@color/plain_white"
            android:onClick="nextClick"
            style="@style/NextButton" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/resultsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/results_button_text"
            android:textColor="@color/plain_white"
            android:textSize="20sp"
            android:visibility="invisible"
            android:background="@drawable/navigation_button_background"/>

    </RelativeLayout>
</LinearLayout>
