...
            android:layout_weight="3"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_background_container">

            <ImageView
                android:id="@+id/animalResultImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:adjustViewBounds="true"
                android:maxWidth="300dp"
                android:maxHeight="300dp"
                android:layout_gravity="center"
                tools:src="@drawable/dolphin"/>

            <Button
                android:id="@+id/captionButtonView"
                android:layout_width="88dp"
                android:layout_height="43dp"
                android:layout_gravity="left"
                android:clickable="false"
                android:textStyle="bold"
                android:textColor="@color/container_background_color"
...
